--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,6 +16,7 @@
 		
 		<div>
 			<a href="/rango/">index</a><br />
+			<a href="/rango/add_category">Add a New Category</a><br />
 			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 		</div>
