--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,27 +1,19 @@
-<!DOCTYPE html>
 
-{% load staticfiles %} <!-- New line -->
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
+{% block title_block %}
+    About Rango
+{% endblock %}
 	
-	<body>
-		<h1>Rango says...</h1>
-		<div>
-			here is the about page.<br />
-			<strong>This tutorial has been put together by Fangyuan bao</strong><br />
-		</div>
+{% block body_block %}
+	<h1>Rango says...</h1>
+	<div>
+		here is the about page.<br />
+		<strong>This tutorial has been put together by Fangyuan bao</strong><br />
+	</div>
 		
-		<div>
-			<a href="/rango/">index</a><br />
-			<a href="/rango/add_category">Add a New Category</a><br />
-			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-		<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-		</div>
-
-		
-	</body>
+	<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+	<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 	
-</html>
+{% endblock %}
